--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,9 @@ django-embed-video==1.4.0
 django-environ==0.4.5
 django-gunicorn==0.1.1
 django-heroku==0.3.1
+django-taggit==1.3.0
+django-taggit-templatetags==0.2.5
+django-templatetag-sugar==1.0
 django-widget-tweaks==1.4.8
 gunicorn==20.0.4
 idna==2.10
